--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -42,15 +42,15 @@ footer p {
   border-radius: 7px;
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
-  width: 240px;
+  width: 290px;
   margin: 16px;
   float: left;
 }
-.note h1 {
+.note h1, .editNoteTitle {
   font-size: 1.1em;
   margin-bottom: 6px;
 }
-.note p {
+.note p, .editNoteContent {
   font-size: 1.1em;
   margin-bottom: 10px;
   white-space: pre-wrap;
